# command-line-rust

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
01_hello/: Cargo.toml
01_hello/tests/: cli.rs
02_echor/: Cargo.toml
02_echor/src/: main.rs
02_echor/tests/: cli.rs
03_catr/: .gitignore  Cargo.toml  prepare.sh
03_catr/src/: lib.rs  main.rs
03_catr/tests/: cli.rs
04_headr/: Cargo.toml
04_headr/src/: lib.rs  main.rs
04_headr/tests/: cli.rs  libtest.rs
04_headr/tests/expected/: all.c1.out  all.c2.out  all.c4.out  all.n2.out  all.n4.out  all.out
05_wcr/: Cargo.toml
05_wcr/src/: count.rs  counter.rs  lib.rs  main.rs  presentation.rs
05_wcr/tests/: cli.rs
06_uniqr/: Cargo.toml
06_uniqr/src/: io.rs  iter.rs  lib.rs  main.rs  unique.rs
06_uniqr/tests/: cli.rs
07_findr/: Cargo.toml
07_findr/src/: lib.rs  main.rs
07_findr/tests/: cli.rs
08_cutr/: Cargo.toml
08_cutr/src/: lib.rs  main.rs  range.rs
08_cutr/src/range/: iter.rs  parser.rs
08_cutr/tests/: cli.rs
08_cutr/tests/expected/: books.c1,1.out
09_grepr/: Cargo.toml
09_grepr/src/: iter.rs  lib.rs  main.rs
09_grepr/tests/: cli.rs
10_commr/: Cargo.toml
10_commr/src/: iter.rs  lib.rs  main.rs
10_commr/tests/: cli.rs
11_tailr/: Cargo.toml
11_tailr/src/: lib.rs  main.rs
11_tailr/tests/: cli.rs
12_fortuner/: Cargo.toml
12_fortuner/src/: lib.rs  main.rs
12_fortuner/tests/: cli.rs
13_calr/: Cargo.toml
13_calr/src/: lib.rs  main.rs
13_calr/tests/: cli.rs
14_lsr/: Cargo.toml
14_lsr/src/: lib.rs  main.rs
14_lsr/tests/: cli.rs
echor/src/: main.rs
