[package]
name = "uniqr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.83"
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
tempfile = "3.10.0"
