[package]
name = "findr"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"]}
regex = "1.10.5"
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.83"
assert_cmd = "2.0.13"
predicates = "3.1.0"
