[package]
name = "grepr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
itertools = "0.13.0"
regex = "1.10.6"
thiserror = "1.0.64"
walkdir = "2.5.0"

[dev-dependencies]
anyhow = "1.0.89"
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
sys-info = "0.9.1"
