[package]
name = "commr"
version = "0.1.0"
edition = "2024"
description = "Compare two sorted files line by line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0.66"

[dev-dependencies]
anyhow = "1.0.92"
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
